# madmom-infer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: DECISIONS.md  DESIGN.md
docs/blueprints/: decisions.md  plan.md
docs/blueprints/plans/: 2026-07-13-clean-api-bug-fixes.md
docs/blueprints/thoughts/: 2026-07-17-decode-dtype-probe.md
madmom_infer/: __about__.py  __init__.py  api.py  models.py  processors.py  utils.py
madmom_infer/audio/: __init__.py  cepstrogram.py  chroma.py  comb_filters.py  filters.py  hpss.py  signal.py  spectrogram.py  stft.py
madmom_infer/config/: checkpoints.toml
madmom_infer/features/: __init__.py  beats.py  beats_crf.py  beats_hmm.py  chords.py  downbeats.py  key.py  notes.py  notes_hmm.py  onsets.py  tempo.py
madmom_infer/ml/: __init__.py  crf.py  gmm.py  hmm.py
madmom_infer/ml/nn/: __init__.py  activations.py  layers.py  unpickle.py
madmom_infer/torch/: __init__.py
madmom_infer/torch/audio/: __init__.py  frontend.py
tests/: __init__.py  generate_fixtures.py  reference_gen.py  test_api.py  test_beats.py  test_beats_crf.py  test_beats_hmm.py  test_cepstrogram.py  test_checkpoint_config.py  test_chords.py  test_chroma.py  test_comb_filters.py  test_crf.py  test_downbeats.py  test_downbeats_rnn.py  test_filters.py  test_fixtures_exist.py  test_gmm.py  test_hmm.py  test_hpss.py  test_key.py  test_lifecycle.py  test_ml_nn.py  test_notes.py  test_onsets.py  test_patterns.py  test_processors.py  test_signal.py  test_signal_leftovers.py  test_spectrogram.py  test_stft.py  test_tempo.py  test_torch_frontend.py  test_version.py
tests/fixtures/: README.md  bar_state_spaces.npz  beat_tracking_end_to_end.npz  beats_activations.npz  beats_comb_filters.npz  beats_crf_functions.npz  beats_hmm.npz  beats_multimodel_selection.npz  beats_structural_digest.json  cepstrogram.npz  chords_end_to_end.npz  chroma_classic.npz  chroma_dnn_activations.npz  chroma_dnn_structural_digest.json  clp_chroma.npz  crf_decode.npz  dbn_downbeat.npz  downbeats_bgru_intermediate.npz  downbeats_bgru_structural_digest.json  filterbank.npz  framing.npz  full_chain.npz  gmm_scores.npz  hmm_toy.npz  hpss.npz  key_activations.npz  key_layer_params.json  key_layers.npz  key_structural_digest.json  logspec.npz  manifest.json  nn_structural_digest.json  notes_adsr_synthetic.npz  notes_end_to_end.npz  notes_layer_params.json  notes_layers.npz  notes_peak_picking_synthetic.npz  notes_structural_digest.json  onset_activations.npz  onset_dsp_functions.npz  (+15 more)
tools/: generate_beat_tempo_fixtures.py  generate_chroma_chord_fixtures.py  generate_crf_pattern_fixtures.py  generate_fixtures.py  generate_key_fixtures.py  generate_leftovers_fixtures.py  generate_notes_fixtures.py  generate_onset_fixtures.py  generate_phase2_fixtures.py
